--- a/1.html
+++ b/1.html
@@ -76,7 +76,7 @@
   }
 </style>
 
-<body>
+<body bgcolor="000000">
 
   <h2>Login Form</h2>
   <!--Step 1 : Adding HTML-->
@@ -94,7 +94,7 @@
       <label><b>Password</b></label>
       <input type="password" placeholder="Enter Password" name="psw" required>
 
-      <button type="submit">Login</button>
+      <button type="submit"><a href="web.html">Login</a></button>
       <input type="checkbox" checked="checked"> Remember me
     </div>
 
